; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/malo/extr_if_malohal.c_malo_hal_intrset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/malo/extr_if_malohal.c_malo_hal_intrset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.malo_hal = type { i32 }

@MALO_REG_A2H_INTERRUPT_MASK = common dso_local global i32 0, align 4
@MALO_REG_INT_CODE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @malo_hal_intrset(%struct.malo_hal* %0, i32 %1) #0 {
  %3 = alloca %struct.malo_hal*, align 8
  %4 = alloca i32, align 4
  store %struct.malo_hal* %0, %struct.malo_hal** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.malo_hal*, %struct.malo_hal** %3, align 8
  %6 = load i32, i32* @MALO_REG_A2H_INTERRUPT_MASK, align 4
  %7 = call i32 @malo_hal_write4(%struct.malo_hal* %5, i32 %6, i32 0)
  %8 = load %struct.malo_hal*, %struct.malo_hal** %3, align 8
  %9 = load i32, i32* @MALO_REG_INT_CODE, align 4
  %10 = call i32 @malo_hal_read4(%struct.malo_hal* %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.malo_hal*, %struct.malo_hal** %3, align 8
  %13 = getelementptr inbounds %struct.malo_hal, %struct.malo_hal* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = load %struct.malo_hal*, %struct.malo_hal** %3, align 8
  %15 = load i32, i32* @MALO_REG_A2H_INTERRUPT_MASK, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @malo_hal_write4(%struct.malo_hal* %14, i32 %15, i32 %16)
  %18 = load %struct.malo_hal*, %struct.malo_hal** %3, align 8
  %19 = load i32, i32* @MALO_REG_INT_CODE, align 4
  %20 = call i32 @malo_hal_read4(%struct.malo_hal* %18, i32 %19)
  ret void
}

declare dso_local i32 @malo_hal_write4(%struct.malo_hal*, i32, i32) #1

declare dso_local i32 @malo_hal_read4(%struct.malo_hal*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
